--- a/resume.tex
+++ b/resume.tex
@@ -28,12 +28,12 @@ experience better and more enjoyable.
     \datedexperience{University of Notre Dame}{September 2005 - December 2010} 
     \explanation{B.S in Electrical Engineering} 
      \explanationdetail{\coloredbullet\ 
-     \lipsum[1][3-4]\par %replace this part with actual text
+     Senior Project - Wrote the microcontroller code for a robotic football team.
      }
     \datedexperience{Austin Coding Academy}{October 2017 - December 2017} 
     \explanation{Javascript Full Stack Web Dev Course - 100\% Grade} 
     \explanationdetail{\coloredbullet\
-     \lipsum[1][3-4]\par %replace this part with actual text
+     Graduation Project - Created a fantasy football stats web scraper.
      }
 %
 % Experience
