--- a/resume.tex
+++ b/resume.tex
@@ -77,7 +77,7 @@ experience better and more enjoyable.
     %
     \newcommand{\skillone}{\createskill{Programming Languages}{\textbf{\emph{Experienced:}} \ \  Typescript \cpshalf Javascript \ \ \textbf{\emph{Familiar:}} \ \  Java \cpshalf Perl \cpshalf Python \cpshalf C \cpshalf C++}}
     %
-    \newcommand{\skilltwo}{\createskill{Software Development}{GIT \cpshalf CLI \cpshalf Agile Methodology \cpshalf DevOps Lifecycle}}
+    \newcommand{\skilltwo}{\createskill{Software Development}{GIT \cpshalf CLI \cpshalf Agile Methodology \cpshalf DevOps Lifecycle \cpshalf Docker \cpshalf Kubernetes}}
     %
     \newcommand{\skillthree}{\createskill{Frameworks \ \& \ Libraries}{Angular \cpshalf React \cpshalf React Native \cpshalf Ionic/Cordova \cpshalf Redux \cpshalf Node \cpshalf GraphQL \cpshalf Apollo}}
     %
