--- a/resume.tex
+++ b/resume.tex
@@ -5,7 +5,7 @@
 \setmobile{832-326-6440}
 \setmail{jonthibeault@gmail.com}
 \setposition{Software Engineer} %ignored for now
-\setlinkedinaccount{https://www.linkedin.com/in/jon-thibeault-845baa1a/}
+\setlinkedinaccount{https://www.linkedin.com/in/jon-thibeault/}
 \setgithubaccount{https://ihopethisnamefi.github.io/}
 \setthemecolor{blue}
 
